force-app/main/default/objects/Job_Posting__c/fields/Document_Stoarge__c.field-meta.xml
<CustomField>
    <fullName>Document_Stoarge__c</fullName>
    <label>Document Stoarge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google Drive</fullName>
            </value>
            <value>
                <fullName>Azure Storage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>