force-app/main/default/objects/Job_Posting__c/fields/Expected_Submission_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Expected_Submission_Per_Day__c</fullName>
    <label>Expected Submission Per Day</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>