force-app/main/default/objects/Job_Posting__c/fields/GDrive_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>GDrive_Folder_ID__c</fullName>
    <label>GDrive Folder ID</label>
    <type>TextArea</type>
</CustomField>