force-app/main/default/objects/Job_Posting__c/fields/Job_Heading__c.field-meta.xml
<CustomField>
    <fullName>Job_Heading__c</fullName>
    <label>Job Heading</label>
    <length>128</length>
    <type>Text</type>
</CustomField>