force-app/main/default/objects/Job_Posting__c/fields/Job_OC_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_OC_Status__c</fullName>
    <label>Job OC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Pause</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>