force-app/main/default/objects/Job_Posting__c/fields/Job_Posting_User_Access__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_User_Access__c</fullName>
    <label>Job Posting User Access</label>
    <type>TextArea</type>
</CustomField>