force-app/main/default/objects/Job_Posting__c/fields/Job_Requirement_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Requirement_Type__c</fullName>
    <label>Job Requirement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>C2H</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>