force-app/main/default/objects/Job_Posting__c/fields/Max_CTC__c.field-meta.xml
<CustomField>
    <fullName>Max_CTC__c</fullName>
    <label>Max CTC</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>