force-app/main/default/objects/Job_Posting__c/fields/Max_Experience__c.field-meta.xml
<CustomField>
    <fullName>Max_Experience__c</fullName>
    <label>Max Experience</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>