force-app/main/default/objects/Job_Posting__c/fields/Min_CTC__c.field-meta.xml
<CustomField>
    <fullName>Min_CTC__c</fullName>
    <label>Min CTC</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>