force-app/main/default/objects/Job_Posting__c/fields/Min_Experience__c.field-meta.xml
<CustomField>
    <fullName>Min_Experience__c</fullName>
    <label>Min Experience</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>