force-app/main/default/objects/Job_Posting__c/fields/No_Of_Candidate_Selected__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Candidate_Selected__c</fullName>
    <label>No Of Candidate Selected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>