force-app/main/default/objects/Job_Posting__c/fields/Posting_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Posting_Due_Date__c</fullName>
    <label>Posting Due Date</label>
    <type>Date</type>
</CustomField>