force-app/main/default/objects/Job_Posting__c/fields/Referral_Amount__c.field-meta.xml
<CustomField>
    <fullName>Referral_Amount__c</fullName>
    <label>Referral Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>