force-app/main/default/objects/Job_Posting__c/fields/Teams__c.field-meta.xml
<CustomField>
    <fullName>Teams__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Teams</label>
    <referenceTo>CustomTeams__Teams__c</referenceTo>
    <relationshipLabel>Job Recruiter&apos;s</relationshipLabel>
    <relationshipName>Job_Recruiting_Team</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>